syntax = "proto3";

package service_payment_manager.v1;

option go_package = "github.com/odihnx/service-infraestructure-manager/gen/go/service_payment_manager/v1";

// ---------- GENERIC RESPONSE WRAPPER ----------

message PaymentManagerGenericResponse {
    string transaction_id = 1; // Unique ID to identify the transaction
    string message = 2;
    PaymentManagerResponseStatus status = 3;
  }
  
// ---------- ENUMS ----------  

enum PaymentManagerResponseStatus {
    RESPONSE_STATUS_UNSPECIFIED = 0;
    RESPONSE_STATUS_OK = 1;
    RESPONSE_STATUS_ERROR = 2;
}

enum UnitMeasurement {
    UNSPECIFIED = 0;
    HOUR = 1;
    DAY = 2;
    WEEK = 3;
    MONTH = 4;
}

// ---------- SERVICE ----------
service PaymentService {

    // obtener rack pago segun id de rack 
    // -> debe entregar datos de rack, installation y tiempos de reserva configurados
    rpc GetPaymentInfraByID(GetPaymentInfraByIDRequest) returns (GetPaymentInfraByIDResponse);

    // obtener lockers disponibles por rack id y booking time
    // -> debe entregar nombre, detalle, precio, unidad, imagenes y disponibilidad del locker
    rpc GetAvailableLockersByRackIDAndBookingTime(GetAvailableLockersByRackIDAndBookingTimeRequest) returns (GetAvailableLockersByRackIDAndBookingTimeResponse);

    // validar cupon de descuento
    // -> si es valido debe entrar porcentaje de descuento y disponibilidad
    // -> si no es valido debe entrar disponibilidad en false
    rpc ValidateDiscountCoupon(ValidateDiscountCouponRequest) returns (ValidateDiscountCouponResponse);

    // generar orden de compra
    // -> debe retornar idatos de registro orden de compra
    rpc GeneratePurchaseOrder(GeneratePurchaseOrderRequest) returns (GeneratePurchaseOrderResponse);

}

// ---------- DTOs ----------

// GetPaymentInfraByID

message GetPaymentInfraByIDRequest {
    string payment_rack_id = 1; // id del rack de pago
}

message GetPaymentInfraByIDResponse {
    PaymentManagerGenericResponse response = 1;
    PaymentRackRecord payment_rack = 2;
    PaymentInstallationRecord installation = 3;
    // lista de booking times habilitados
    repeated PaymentBookingTimeRecord booking_times = 4;
}

// GetAvailableLockersByRackIDAndBookingTime

message GetAvailableLockersByRackIDAndBookingTimeRequest {
    int32 payment_rack_id = 1; // id del rack de pago
    int32 booking_time_id = 2; // id del tiempo de reserva
}

message GetAvailableLockersByRackIDAndBookingTimeResponse {
    PaymentManagerGenericResponse response = 1;
    // lista de lockers disponibles
    repeated AvailablePaymentGroupRecord available_group = 2;
}

// ValidateDiscountCoupon

message ValidateDiscountCouponRequest {
    string coupon_code = 1; // codigo del cupon de descuento
}

message ValidateDiscountCouponResponse {
    PaymentManagerGenericResponse response = 1;
    bool is_valid = 2; // indica si el cupon es valido
    float discount_percentage = 3; // porcentaje de descuento aplicado
}

// GeneratePurchaseOrder

message GeneratePurchaseOrderRequest {
    int32 group_id = 1; // id del grupo seleccionado
    string coupon_code = 2; // codigo del cupon de descuento (opcional)
    string user_email = 3; // email del usuario que realiza la compra
    string user_phone = 4; // telefono del usuario que realiza la compra
}

message GeneratePurchaseOrderResponse {
    PaymentManagerGenericResponse response = 1;
    string oc = 2; // id de la orden de compra generada
    string email = 3; // monto total a pagar
    string phone = 4; // telefono del usuario
    float discount = 5; // descuento aplicado
    int32 product_price = 6; // precio del producto sin descuento
    int32 final_product_price = 7; // precio final del producto con descuento
    string product_name = 8; // nombre del producto comprado
    string product_description = 9; // descripcion del producto comprado
    int32 locker_position = 10; // posicion del locker asignado
    string installation_name = 11; // nombre de la instalacion    
}

// ---------- Data Objects ----------

message PaymentInstallationRecord {
    int32 id = 1;
    string name = 2;
    string region = 3;
    string city = 4;
    string address = 5;
    string image_url = 6;
}

message PaymentRackRecord {
    int32 id = 1;
    string description = 2;
    string address = 3;
}

message PaymentBookingTimeRecord {
    int32 id = 1;
    string name = 2;
    UnitMeasurement unit_measurement = 3;
    int32 amount = 4;
}

message AvailablePaymentGroupRecord {
    int32 group_id = 1;
    string name = 2;
    float price = 3;
    string description = 4;
    string image_url = 5;
}